--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:name=".App"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:replace="android:fullBackupContent"
         tools:targetApi="31">
